--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
 bytemuck = "1.13.1"
+nanoid = "0.4.0"
+rand = "0.8.5"
 smallvec = "1.10.0"
+tokio = { version = "1.28.2", features = ["full"] }
 wgpu = "0.16.1"
