--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 bytemuck = "1.13.1"
+itertools = "0.10.5"
 nanoid = "0.4.0"
 rand = "0.8.5"
 smallvec = "1.10.0"
