--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 async-trait = "0.1.68"
+bitflags = "2.3.2"
 bytemuck = "1.13.1"
 itertools = "0.10.5"
 nanoid = "0.4.0"
+once_cell = "1.18.0"
 rand = "0.8.5"
 smallvec = "1.10.0"
 tokio = { version = "1.28.2", features = ["full"] }
