--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ nanoid = "0.4.0"
 once_cell = "1.18.0"
 rand = "0.8.5"
 smallvec = "1.10.0"
+thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["full"] }
 wgpu = "0.16.1"
