--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.71"
 async-trait = "0.1.68"
 bitflags = "2.3.2"
 bytemuck = "1.13.1"
+downcast-rs = "1.2.0"
 itertools = "0.10.5"
 nanoid = "0.4.0"
 once_cell = "1.18.0"
